<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_calendar"
            android:title="@string/create"/>
        <item
            android:id="@+id/nav_join"
            android:icon="@drawable/ic_handshake2"
            android:title="@string/join"/>
        <item
            android:id="@+id/nav_show"
            android:icon="@drawable/ic_note"
            android:title="@string/show"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile2"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>