<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".JoinActivity">
    <Button
        android:id="@+id/btn_joinQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle5"
        android:text="@string/joinQR"
        android:textColor="@drawable/button_text_color_2"
        android:textSize="26sp"
        android:padding="@dimen/activity_vertical_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/orType"
        android:textColor="#6C7A89"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/eventID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="64dp"
        android:gravity="center"
        android:background="@drawable/edit_text"
        android:hint="@string/eventID"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        android:singleLine="true" />
    <Button
        android:id="@+id/btn_joinID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle2"
        android:fontFamily="@font/walter_turncoat"
        android:text="@string/joinOnly"
        android:textColor="#6C7A89"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
</LinearLayout>
