<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".RegisterActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/walter_turncoat"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/hello4"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/edit_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/prompt_username"
            android:textColor="#6C7A89"
            android:inputType="text"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="16dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/edit_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/prompt_email"
            android:textColor="#6C7A89"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="16dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/edit_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/prompt_password"
            android:textColor="#6C7A89"
            android:inputType="textPassword"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="16dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/edit_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/prompt_number"
            android:textColor="#6C7A89"
            android:inputType="phone"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="16dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/walter_turncoat"
            android:background="@drawable/rectangle"
            android:text="@string/next"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp" />
        <TextView
            android:id="@+id/have"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/have"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@drawable/text_color_1"
            android:fontFamily="@font/walter_turncoat"
            android:textSize="22sp"
            android:textStyle="italic|bold"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>