<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".RegisterVerificationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/walter_turncoat"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/hello5"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/walter_turncoat"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/verification"
                android:textColor="#6C7A89"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/edit_text"
                android:textSize="18sp"
                android:textColor="#6C7A89"
                android:gravity="center"
                android:hint="@string/code"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="4"
                android:padding="16dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_register_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/activity_vertical_margin"
                android:textColor="#6C7A89"
                android:fontFamily="@font/walter_turncoat"
                android:background="@drawable/rectangle3"
                android:text="@string/finish"
                android:textSize="28sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/access"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/access"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@drawable/text_color_1"
                android:fontFamily="@font/walter_turncoat"
                android:textSize="22sp"
                android:textStyle="italic|bold"/>
            <Button
                android:id="@+id/btn_callMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/walter_turncoat"
                android:text="@string/callme"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="22dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>