<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/walter_turncoat"
            android:layout_gravity="center_horizontal"
            android:text="@string/hello1"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/walter_turncoat"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/hello2"
            android:textColor="#6C7A89"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_go_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/walter_turncoat"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"/>
                <TextView
                    android:id="@+id/or"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/walter_turncoat"
                    android:text="@string/or"
                    android:textColor="#6C7A89"
                    android:textSize="24sp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_go_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle2"
            android:fontFamily="@font/walter_turncoat"
            android:text="@string/register"
            android:textColor="#6C7A89"
            android:textStyle="bold"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/btn_coba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle2"
            android:fontFamily="@font/walter_turncoat"
            android:text="NYOBAK BOS"
            android:textColor="#6C7A89"
            android:textStyle="bold"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="32dp"/>

</LinearLayout>